[gd_scene load_steps=4 format=2]

[ext_resource path="res://menufont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Options.gd" type="Script" id=2]
[ext_resource path="res://Sprites/background.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 256.0
margin_top = 20.0
margin_right = 597.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 341.0
margin_bottom = 440.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 9.0
margin_right = 321.0
margin_bottom = 429.0
rect_min_size = Vector2( 301, 420 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_right = 301.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 301.0
margin_bottom = 41.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Display Mode[/center]"
text = "Display Mode"
fit_content_height = true
scroll_active = false

[node name="DisplayMode" type="OptionButton" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 301.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )

[node name="Back" type="TextureButton" parent="MarginContainer/MarginContainer"]
margin_left = 54.0
margin_top = 372.0
margin_right = 246.0
margin_bottom = 420.0
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/Back"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 40.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/Back/MarginContainer"]
margin_right = 176.0
margin_bottom = 41.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Back[/center]"
text = "Back"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="MarginContainer/MarginContainer/VBoxContainer/DisplayMode" to="." method="_on_DisplayMode_item_selected"]
[connection signal="pressed" from="MarginContainer/MarginContainer/Back" to="." method="_on_Back_pressed"]
